# solaris

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  driver.c  project.4coder
examples/: CMakeLists.txt  common.c  common.h  examples.c
examples/arena/: alloc.c  alloc.h
examples/catalog/: decode.c  decode.h
include/solaris/: arena.h  catalog.h  globe.h  linear.h  math.h  object.h  planet.h  solaris.h  string.h  time.h  types.h
libsolaris/: CMakeLists.txt  date-time.c  date-time.h  math.c  math.h  solaris.h  types.h
libsolaris/ephemeris/: catalog.c  catalog.h  coordinates.c  coordinates.h  fixed-object.c  fixed-object.h  globe-tree.c  globe-tree.h  planet.c  planet.h
libsolaris/utility/: arena.c  arena.h  number-set.c  number-set.h  string.c  string.h
src/: arena.c  catalog.c  globe.c  linear.c  math.c  object.c  planet.c  string.c  time.c
tests/: CMakeLists.txt  test_arena.cpp  test_linear.cpp  test_math.cpp
